--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="s-menu">
         <ul>
             <li class="s-menu__item"><a href="/">Página Inicial</a></li>
-            <li class="s-menu__item"><a href="#">Tobey Maguire</a></li>
+            <li class="s-menu__item"><a href="./pages/tobey-maguire/spiderman1.html">Tobey Maguire</a></li>
             <li class="s-menu__item s-menu__icon">
                 <img src="./assets/images/icons/spider.svg" alt="Spider Man Multiverso">
             </li>
